Revision history for Perl extension Tree-Simple-View.

0.180002  2017-04-14:11:13:21
	- Add repostory section to the pod of Tree::Simple::View.
	- Move t/manifest.t, t/pod_coverage.t and t/pod.t to xt/author.
	- Add Changelog.ini.
	- Add .gitignore, LICENSE.
	- Modernize MANIFEST.SKIP.


0.180001
  * added github repo to Makefile
  * update Documentations for configurable characters in ASCII view

0.18
    * added configurable characters for ASCII view

0.17
    * added node_formatter support for ASCII view

0.16 Mon. July, 9, 2007
    * cleaning bad files in the tar.gz
    * converted to Build.PL

0.15 Mon. May 21, 2007
    * added a simple Tree::Simple::View::ASCII
        - added docs and tests for it

0.14 Mon Novermber 28, 2005
    - removing the OS X resource fork files
    - applied patch (RT #16064) to support XHTML
      compliant output for Tree::Simple::View::HTML.
        - thanks to Simon Wilcox for this patch and tests

0.13 Mon. November 7, 2005
    - fixing typo on the generated HTML (rt.cpan.org Ticket #14963)
    - cleaned up View.pm as little as well

0.12 Mon Jan 31 2005
    - converted this to use Class::Throwable for exceptions
       - altered tests for this

    - added the 'radio_button' and 'checkbox' attributes to
      the Tree::Simple::View::DHTML class
        - added tests for this
        - added documentation for this

0.11 Thurs Nov 18 2004
    - now using Scalar::Util::blessed() instead of
      the convoluted UNIVERSAL::isa() stuff.
      - added Scalar::Util as a dependency

0.10 Sat Aug 7 2004
    - Added the setPathComparisonFunction method
      so that custom node value's can be compared
      easily. Thanks to Neyuki for this idea.
        - documentented and tested this

0.09 Mon Aug 2 2004
    - I forgot to change the version requirements for
      Tree::Simple to 1.07 which is the first version
      that uses the getUID methods.

0.08 Sun Aug 1 2004
    - Changed the way that the DHTML DIV IDs were being