@@ -6,7 +6,8 @@ Revision history for Perl extension Tree-Simple-View.
 	- Add Changelog.ini.
 	- Add .gitignore, LICENSE.
 	- Modernize MANIFEST.SKIP.
-
+	- Switch from 'use base' to 'use parent'.
+	- Add various modules to the pre-reqs in Makefile.PL.
 
 0.180001
   * added github repo to Makefile
